@@ -1,3 +1,9 @@
+Sat, 19 Apr 2008 20:16:11 +0200 <thp@perli.net>
+Better tray icon menu item on Maemo-based platforms
+
+	* src/gpodder/trayicon.py: Better tray icon integration (show/hide
+	gPodder via tray icon) on Maemo
+
 Sat, 19 Apr 2008 18:46:30 +0200 <thp@perli.net>
 Additional fields for the device remove episodes dialog; refactoring
 
